--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
   </header>
 
 
-  Keep track of your snippets
-
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
+  <div class="container">
+    <div class="row justify-content-center text-center">
+      <div class="col-md-8">
+        <h2 class="fw-semibold mb-4 custom-h2">Keep track of your snippets</h2>
+        Clipboard instantly stores any item you copy in the cloud,
+        meaning you can access your snippets immediately on all your
+        devices. Our Mac and iOS apps will help you organize everything.
+      </div>
+    </div>
+  </div>
 
   Quick Search
 
