--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
     <div class="row justify-content-center text-center">
       <div class="col-md-8">
         <h2 class="fw-semibold mb-4 custom-h2">Keep track of your snippets</h2>
-        Clipboard instantly stores any item you copy in the cloud,
-        meaning you can access your snippets immediately on all your
-        devices. Our Mac and iOS apps will help you organize everything.
+        <div class="lead mb-5">
+          Clipboard instantly stores any item you copy in the cloud,
+          meaning you can access your snippets immediately on all your
+          devices. Our Mac and iOS apps will help you organize everything.
+        </div>
       </div>
     </div>
   </div>
