Completed third section with img and features text

--- a/index.html
+++ b/index.html
@@ -43,25 +43,27 @@
       <div class="col-md-8">
         <h2 class="fw-semibold mb-4 custom-h2">Keep track of your snippets</h2>
         <div class="lead mb-5">
-          Clipboard instantly stores any item you copy in the cloud,
-          meaning you can access your snippets immediately on all your
-          devices. Our Mac and iOS apps will help you organize everything.
+          <p>
+            Clipboard instantly stores any item you copy in the cloud,
+            meaning you can access your snippets immediately on all your
+            devices. Our Mac and iOS apps will help you organize everything.
+          </p>
         </div>
       </div>
     </div>
   </div>
 
-  Quick Search
-
-  Easily search your snippets by content, category, web address, application, and more.
-
-  iCloud Sync
-
-  Instantly saves and syncs snippets across all your devices.
-
-  Complete History
-
-  Retrieve any snippets from the first moment you started using the app.
+  <div class="container d-flex align-items-center">
+    <img src="./images/image-computer.png" alt="Computer" class="flex-shrink-0">
+    <div class="text-content mb-auto">
+      <h3 class="fw-semibold mb-4">Quick Search</h3>
+      <p class="mb-4">Easily search your snippets by content, category, web address, application, and more.</p>
+      <h3 class="fw-semibold mb-4">iCloud Sync</h3>
+      <p class="mb-4">Instantly saves and syncs snippets across all your devices.</p>
+      <h3 class="fw-semibold mb-4">Complete History</h3>
+      <p>Retrieve any snippets from the first moment you started using the app.</p>
+    </div>
+  </div>
 
   Access Clipboard anywhere
 
