Completed last section before footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 <body>
 
- 
+  <!-- Header section -->
+
   <header class="bg-header">
     <div class="header-content">
       <div class="container">
@@ -37,6 +38,7 @@
     </div>
   </header>
 
+  <!-- Second section: keep track of your snippets -->
 
   <div class="container">
     <div class="row justify-content-center text-center">
@@ -53,9 +55,11 @@
     </div>
   </div>
 
+  <!-- Third section: computer image and features on right side -->
+
   <div class="container d-flex align-items-center">
-    <img src="./images/image-computer.png" alt="Computer" class="flex-shrink-0">
-    <div class="text-content mb-auto">
+    <img src="./images/image-computer.png" alt="Picture of a computer with a beachy desktop background" class="flex-shrink-0">
+    <div class="text-content mb-auto w-25">
       <h3 class="fw-semibold mb-4">Quick Search</h3>
       <p class="mb-4">Easily search your snippets by content, category, web address, application, and more.</p>
       <h3 class="fw-semibold mb-4">iCloud Sync</h3>
@@ -65,11 +69,28 @@
     </div>
   </div>
 
-  Access Clipboard anywhere
+  <!-- Fourth section: Access clipboard anywhere under computer image -->
 
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
+  <div class="container mt-5">
+    <div class="row justify-content-center text-center">
+      <div class="col-md-8">
+        <h2 class="fw-semibold mb-4 custom-h2">Access Clipboard anywhere</h2>
+        <div class="lead mb-5">
+          <p>
+            Whether you’re on the go, or at your computer, you can access all your Clipboard 
 
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Picture of phone and ipad -->
+
+  <div class="d-flex justify-content-center my-5">
+    <img src="./images/image-devices.png" alt="A phone to the left of a tablet laid horizontally, each with beach themed backgrounds" class="d-inline-flex align-self-start">
+  </div>
+  
   Supercharge your workflow
 
   We’ve got the tools to boost your productivity.
@@ -86,13 +107,20 @@
 
   Quick preview of all snippets on your Clipboard for easy access.
 
-  Clipboard for iOS and Mac OS
 
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
+  <div class="container">
+    <div class="row justify-content-center text-center">
+      <div class="col-md-8">
+        <h2 class="fw-semibold mb-4 custom-h2">Clipboard for iOS and Mac OS</h2>
+        <p class="lead mb-5">Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+          and you’re ready to start adding to your clipboard.</p>
+        <div class="d-flex justify-content-center gap-3">
+          <button type="button" class="btn btn-primary btn-lg rounded-pill custom-btn">Download for iOS</button>
+          <button type="button" class="btn btn-secondary btn-lg rounded-pill custom-btn">Download for Mac</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   FAQs
   Contact Us
@@ -103,7 +131,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Justin Watson</a>.
     </p>
   </footer>
 </body>
