Corrected text of fourth section

--- a/index.html
+++ b/index.html
@@ -76,10 +76,7 @@
       <div class="col-md-8">
         <h2 class="fw-semibold mb-4 custom-h2">Access Clipboard anywhere</h2>
         <div class="lead mb-5">
-          <p>
-            Whether you’re on the go, or at your computer, you can access all your Clipboard 
-
-          </p>
+          <p>Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
         </div>
       </div>
     </div>
