--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Header section -->
 
   <header class="bg-header">
-    <div class="header-content">
+    <section class="header-content">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-md-8">
@@ -35,12 +35,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </header>
 
   <!-- Second section: keep track of your snippets -->
 
-  <div class="container">
+  <section class="container">
     <div class="row justify-content-center text-center">
       <div class="col-md-8">
         <h2 class="fw-semibold mb-4 custom-h2">Keep track of your snippets</h2>
@@ -53,11 +53,11 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
   <!-- Third section: computer image and features on right side -->
 
-  <div class="container d-flex align-items-center">
+  <section class="container d-flex align-items-center">
     <img src="./images/image-computer.png" alt="Picture of a computer with a beachy desktop background" class="flex-shrink-0">
     <div class="text-content mb-auto w-25">
       <h3 class="fw-semibold mb-4">Quick Search</h3>
@@ -67,11 +67,11 @@
       <h3 class="fw-semibold mb-4">Complete History</h3>
       <p>Retrieve any snippets from the first moment you started using the app.</p>
     </div>
-  </div>
+  </section>
 
   <!-- Fourth section: Access clipboard anywhere under computer image -->
 
-  <div class="container mt-5">
+  <section class="container mt-5">
     <div class="row justify-content-center text-center">
       <div class="col-md-8">
         <h2 class="fw-semibold mb-4 custom-h2">Access Clipboard anywhere</h2>
@@ -80,17 +80,27 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
   <!-- Picture of phone and ipad -->
 
-  <div class="d-flex justify-content-center my-5">
+  <section class="d-flex justify-content-center my-5">
     <img src="./images/image-devices.png" alt="A phone to the left of a tablet laid horizontally, each with beach themed backgrounds" class="d-inline-flex align-self-start">
-  </div>
-  
-  Supercharge your workflow
+  </section>
 
-  We’ve got the tools to boost your productivity.
+  <!-- Fifth section -->
+
+  <section class="container mt-5">
+    <section class="row justify-content-center text-center">
+      <div class="col-md-8">
+        <h2 class="fw-semibold mb-4 custom-h2">Supercharge your workflow</h2>
+        <div class="lead mb-5">
+          <p>We’ve got the tools to boost your productivity.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  
 
   Create blacklists
 
@@ -104,8 +114,17 @@
 
   Quick preview of all snippets on your Clipboard for easy access.
 
+  <!-- Logo section -->
 
-  <div class="container">
+  <section class="container my-5 d-flex justify-content-between align-items-center">
+    <img src="./images/logo-google.png" alt="Google Logo">
+    <img src="./images/logo-ibm.png" alt="IBM Logo">
+    <img src="./images/logo-microsoft.png" alt="Microsoft Logo">
+    <img src="./images/logo-hp.png" alt="Hewlett Packard Logo">
+    <img src="./images/logo-vector-graphics.png" alt="Vector Graphics Logo">
+  </section>
+
+  <section class="container">
     <div class="row justify-content-center text-center">
       <div class="col-md-8">
         <h2 class="fw-semibold mb-4 custom-h2">Clipboard for iOS and Mac OS</h2>
@@ -117,7 +136,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
   FAQs
   Contact Us
