--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
   <section class="container d-flex align-items-center">
     <img src="./images/image-computer.png" alt="Picture of a computer with a beachy desktop background" class="flex-shrink-0">
     <div class="text-content mb-auto w-25">
-      <h3 class="fw-semibold mb-4">Quick Search</h3>
+      <h3 class="fw-semibold mb-1">Quick Search</h3>
       <p class="mb-4">Easily search your snippets by content, category, web address, application, and more.</p>
-      <h3 class="fw-semibold mb-4">iCloud Sync</h3>
+      <h3 class="fw-semibold mb-1">iCloud Sync</h3>
       <p class="mb-4">Instantly saves and syncs snippets across all your devices.</p>
-      <h3 class="fw-semibold mb-4">Complete History</h3>
+      <h3 class="fw-semibold mb-1">Complete History</h3>
       <p>Retrieve any snippets from the first moment you started using the app.</p>
     </div>
   </section>
@@ -100,19 +100,29 @@
       </div>
     </div>
   </section>
+
+  <!-- Logos with text underneath section -->
   
+  <div class="container d-flex justify-content-between align-items-center">
+    <div class="grid-container">
+      <img class="m-auto img-fluid" src="./images/icon-blacklist.svg" alt="Blacklist Icon">
+      <h3 class="text-center">Create blacklists</h3>
+      <p class="text-center">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+    </div>
 
-  Create blacklists
 
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+    <div class="grid-container">
+      <img class="m-auto img-fluid" src="./images/icon-text.svg" alt="Text Icon">
+      <h3 class="text-center">Plain text snippets</h3>
+      <p class="text-center">Remove unwanted formatting from copied text for a consistent look.</p>
+    </div>
 
-  Plain text snippets
-
-  Remove unwanted formatting from copied text for a consistent look.
-
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
+    <div class="grid-container">
+      <img class="m-auto img-fluid" src="./images/icon-preview.svg" alt="Preview Icon">
+      <h3 class="text-center">Sneak preview</h3>
+      <p class="text-center">Quick preview of all snippets on your Clipboard for easy access.</p>
+    </div> 
+  </div>
 
   <!-- Logo section -->
 
@@ -123,6 +133,8 @@
     <img src="./images/logo-hp.png" alt="Hewlett Packard Logo">
     <img src="./images/logo-vector-graphics.png" alt="Vector Graphics Logo">
   </section>
+
+  <!-- Last section before footer -->
 
   <section class="container">
     <div class="row justify-content-center text-center">
