--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
   <!-- Fifth section -->
 
   <section class="container mt-5">
-    <section class="row justify-content-center text-center">
+    <div class="row justify-content-center text-center">
       <div class="col-md-8">
         <h2 class="fw-semibold mb-4 custom-h2">Supercharge your workflow</h2>
-        <div class="lead mb-5">
+        <div class="lead">
           <p>We’ve got the tools to boost your productivity.</p>
         </div>
       </div>
@@ -126,7 +126,7 @@
 
   <!-- Logo section -->
 
-  <section class="container my-5 d-flex justify-content-between align-items-center">
+  <section class="container d-flex justify-content-between align-items-center">
     <img src="./images/logo-google.png" alt="Google Logo">
     <img src="./images/logo-ibm.png" alt="IBM Logo">
     <img src="./images/logo-microsoft.png" alt="Microsoft Logo">
@@ -150,17 +150,35 @@
     </div>
   </section>
 
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
+  <footer class="bg-light py-4">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="footer-clipboard-logo">
+        <img id="clipboard-logo" src="./images/logo.svg" alt="Clipboard Logo" class="img-fluid">
+      </div>
+      <div class="footer-links-grid">
+        <ul class="list-unstyled mb-0">
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+        <ul class="list-unstyled mb-0">
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Press Kit</a></li>
+        </ul>
+        <ul class="list-unstyled mb-0">
+          <li><a href="#">Install Guide</a></li>
+        </ul>
+      </div>
+      <ul class="list-unstyled d-flex gap-3 mb-0">
+        <li><a href="http://facebook.com"><img src="./images/icon-facebook.svg" alt="facebook icon"></a></li>
+        <li><a href="http://twitter.com"><img src="./images/icon-twitter.svg" alt="twitter icon"></a></li>
+        <li><a href="http://instagram.com"><img src="./images/icon-instagram.svg" alt="instagram icon"></a></li>
+      </ul>
+    </div>
+  </footer>
   
-  <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Justin Watson</a>.
     </p>
-  </footer>
 </body>
 </html>
