Fixed alignment of footer links

--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
       </div>
       <div class="footer-links-grid">
         <ul class="list-unstyled mb-0">
-          <li><a href="#">FAQs</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li class="mb-3"><a href="#">FAQs</a></li>
+          <li class="mb-3"><a href="#">Contact Us</a></li>
         </ul>
         <ul class="list-unstyled mb-0">
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Press Kit</a></li>
+          <li class="mb-3"><a href="#">Privacy Policy</a></li>
+          <li class="mb-3"><a href="#">Press Kit</a></li>
         </ul>
         <ul class="list-unstyled mb-0">
-          <li><a href="#">Install Guide</a></li>
+          <li class="mb-3"><a href="#">Install Guide</a></li>
         </ul>
       </div>
       <ul class="list-unstyled d-flex gap-3 mb-0">
